[tool.poetry]
name = "python-template"
version = "0.1.1"
description = "Editor de texto para python"
authors = ["Endriw Villa <endriw_villa@icloud.com"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
pyttk = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




